[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/UI/UI_TravelBook_Select01a.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/UI_TravelBook_Fill01b.png" type="Texture" id=2]
[ext_resource path="res://assets/upgrades/ally.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/UI_TravelBook_BookPageLeft01a.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/UI_TravelBook_BookPageRight01a.png" type="Texture" id=5]
[ext_resource path="res://assets/font/BATTLE ROAD DEMO.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/UI/UI_TravelBook_Slot01a.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/UI_TravelBook_Fill01a.png" type="Texture" id=8]
[ext_resource path="res://assets/font/Hey Comic.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/UI/UI_TravelBook_FrameSelect01a.png" type="Texture" id=10]
[ext_resource path="res://assets/UI/UI_TravelBook_BookCover01a.png" type="Texture" id=11]
[ext_resource path="res://assets/UI/UI_TravelBook_FrameSelect01b.png" type="Texture" id=12]
[ext_resource path="res://src/ShopUI.gd" type="Script" id=13]
[ext_resource path="res://assets/effects/Explosion_G.png" type="Texture" id=14]
[ext_resource path="res://assets/effects/Explosion_H.png" type="Texture" id=15]
[ext_resource path="res://assets/effects/Explosion_B.png" type="Texture" id=16]
[ext_resource path="res://assets/effects/Explosion_C.png" type="Texture" id=17]
[ext_resource path="res://assets/effects/Explosion_A.png" type="Texture" id=18]
[ext_resource path="res://assets/effects/Explosion_D.png" type="Texture" id=19]
[ext_resource path="res://assets/effects/Explosion_E.png" type="Texture" id=20]
[ext_resource path="res://assets/effects/Explosion_F.png" type="Texture" id=21]
[ext_resource path="res://assets/UI/RightArrowButton_7x10.png" type="Texture" id=22]
[ext_resource path="res://assets/UI/UI_TravelBook_Popup01a.png" type="Texture" id=23]
[ext_resource path="res://assets/font/Wrong time, wrong place.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://assets/sound/048. Buy Mode.mp3" type="AudioStream" id=25]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 6 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=11]
size = 40
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("tank/Ally:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "aly_rotate"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("tank/Ally:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.6, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, -180.0, -360.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "tank_speed"
length = 2.5
loop = true

[node name="ShopUI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 13 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.996078, 0, 0, 0.666667 )
margin_right = 1032.0
margin_bottom = 609.0

[node name="ui" type="Node" parent="."]

[node name="UiTravelBookBookCover01a" type="Sprite" parent="ui"]
position = Vector2( 519, 323 )
scale = Vector2( 2.88393, 2.6 )
texture = ExtResource( 11 )

[node name="UiTravelBookBookPageLeft01a" type="Sprite" parent="ui"]
position = Vector2( 370, 323 )
scale = Vector2( 2.80769, 2.58673 )
texture = ExtResource( 4 )

[node name="UiTravelBookBookPageRight01a" type="Sprite" parent="ui"]
position = Vector2( 665, 323 )
scale = Vector2( 2.89423, 2.58503 )
texture = ExtResource( 5 )

[node name="UiTravelBookSlot01a" type="Sprite" parent="ui"]
position = Vector2( 370, 259 )
scale = Vector2( 6.16563, 5.50677 )
texture = ExtResource( 7 )

[node name="UiTravelBookSlot01a2" type="Sprite" parent="ui"]
position = Vector2( 674, 260 )
scale = Vector2( 6.0625, 5.50833 )
texture = ExtResource( 7 )

[node name="UiTravelBookSelect01a" type="Sprite" parent="ui"]
position = Vector2( 369.5, 259.5 )
scale = Vector2( 6.76667, 6.03333 )
texture = ExtResource( 1 )

[node name="UiTravelBookSelect01a2" type="Sprite" parent="ui"]
position = Vector2( 675, 260 )
scale = Vector2( 6.76667, 6.03333 )
texture = ExtResource( 1 )

[node name="UiTravelBookPopup01a" type="Sprite" parent="ui"]
position = Vector2( 517, 70.25 )
scale = Vector2( 6.41935, 2.31667 )
texture = ExtResource( 23 )

[node name="Label" type="Label" parent="."]
margin_left = 347.0
margin_top = 44.0
margin_right = 690.0
margin_bottom = 98.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "SHOP UPGRADES"
autowrap = true

[node name="tank" type="Node" parent="."]

[node name="Ally" type="Sprite" parent="tank"]
position = Vector2( 373, 259 )
scale = Vector2( 0.360563, 0.377271 )
texture = ExtResource( 3 )

[node name="bomb2" type="Node" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="bomb2"]
position = Vector2( 675, 259 )
scale = Vector2( 0.461914, 0.449707 )
frames = SubResource( 6 )
frame = 3
speed_scale = 3.0
playing = true

[node name="ALLIES" type="Label" parent="."]
margin_left = 306.0
margin_top = 343.0
margin_right = 434.0
margin_bottom = 389.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "ALLIES"
align = 1

[node name="BOMB" type="Label" parent="."]
margin_left = 591.0
margin_top = 344.0
margin_right = 758.0
margin_bottom = 390.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "BOMB"
align = 1

[node name="allies_button" type="TextureButton" parent="."]
margin_left = 278.0
margin_top = 394.0
margin_right = 456.0
margin_bottom = 422.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="buy_label" type="Label" parent="."]
margin_left = 282.0
margin_top = 396.0
margin_right = 451.0
margin_bottom = 420.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "BUY for 10 coins"
align = 1
autowrap = true

[node name="bomb_button" type="TextureButton" parent="."]
margin_left = 582.0
margin_top = 393.0
margin_right = 760.0
margin_bottom = 421.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="buy_label3" type="Label" parent="."]
margin_left = 582.0
margin_top = 395.0
margin_right = 758.0
margin_bottom = 419.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "BUY for 25 coins"
align = 1
autowrap = true

[node name="continue_button" type="TextureButton" parent="."]
margin_left = 621.0
margin_top = 537.0
margin_right = 834.0
margin_bottom = 580.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 12 )
expand = true

[node name="RightArrowButton7X10" type="Sprite" parent="."]
position = Vector2( 788, 557 )
scale = Vector2( 3.46428, 2.55 )
texture = ExtResource( 22 )

[node name="continue-label" type="Label" parent="."]
margin_left = 656.0
margin_top = 543.0
margin_right = 777.0
margin_bottom = 576.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "CONTINUE "

[node name="error-label" type="Label" parent="."]
visible = false
margin_left = 309.0
margin_top = 441.0
margin_right = 733.0
margin_bottom = 468.0
custom_colors/font_color = Color( 1, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 5 )
text = "Failed to purchase, not enough coins"
align = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/aly_rotate = SubResource( 9 )
anims/tank_speed = SubResource( 8 )

[node name="buy-sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )

[connection signal="pressed" from="allies_button" to="." method="_on_buy_ally"]
[connection signal="pressed" from="bomb_button" to="." method="_on_buy_bomb"]
[connection signal="pressed" from="continue_button" to="." method="_on_close_shop"]
